src/Components/Container.css
.container {
  width: calc(100% - 100px);
  padding: 20px;
  padding-top: 30px;
}

.topContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.topContainer .inputBox {
  width: 350px;
  height: 45px;
  position: relative;
}

.topContainer .inputBox input {
  width: calc(100% - 40px);
  height: 100%;
  padding: 0px 40px;
  font-size: 16px;
  color: #d0cfd4;
  background: #75738045;
  border: 2px solid transparent;
  border-radius: 25px;
  transition: background 0.3s, border-color 0.3s;
  outline: none;
}

.topContainer .inputBox input::placeholder {
  color: #757380;
}

.topContainer .inputBox .searchIcon {
  position: absolute;
  left: 0;
  top: 0;
  width: 40px;
  height: 45px;
  line-height: 45px;
  font-size: 25px;
  color: #8d8b97;
  text-align: center;
  border-color: #757380;
  padding-top: 2px;
}

.topContainer .inputBox input:focus {
  border-width: 1.5px;
  border-color: #0db5cb;
  background: #75738072;
  color: #d0cfd4;
}

.inputBox:focus-within .searchIcon {
  color: #0db5cb;
}

.profileContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #d0cfd4;
  position: relative;
}

.profileContainer .profileIcon {
  width: 40px;
  height: 40px;
  background: #19162c;
  border-radius: 6px;
  text-align: center;
  line-height: 40px;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
  font-size: 18px;
  position: relative;
}

.profileContainer .profileIcon::before {
  position: absolute;
  content: "";
  top: 5px;
  right: 10px;
  width: 8px;
  height: 8px;
  background: hsl(190, 85%, 40%);
  border-radius: 50%;
}

.profileContainer .profileImage {
  width: 40px;
  height: 40px;
  background: #555;
  border-radius: 100%;
  margin: 0px 10px;
  overflow: hidden;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
}

.profileContainer .profileImage img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.profileContainer .profileName {
  font-family: "Roboto", sans-serif;
  font-weight: 600;
  font-size: 14px;
}

.profileContainer .menuChevron {
  cursor: pointer;
  font-size: 12px;
  margin: 0px 10px;
}

.profileContainer .menuChevron:hover {
  transition: transform 0.5s ease;
}

.profileContainer .menuContainer {
  position: absolute;
  right: 10px;
  top: 50px;
  background: #19162c;
  border-radius: 10px;
  width: 180px;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
  z-index: 1;
  transform: translateX(300px);
  transition: transform 0.3s cubic-bezier(0.17, 0.81, 0.38, 1.39);
}

.profileContainer .menuContainer:after {
  position: absolute;
  content: "";
  width: 10px;
  height: 10px;
  background: hsl(190, 85%, 40%);
  top: -5px;
  right: 14px;
  transform: rotate(45deg);
}

.profileContainer .menuContainer ul {
  width: 100%;
  height: 100%;
}

.profileContainer .menuContainer ul li {
  list-style: none;
  margin: 5px 0;
  width: 100%;
  padding: 10px 20px;
  cursor: pointer;
  color: #757380;
  text-align: left;
}

.profileContainer .menuContainer ul li:hover {
  background: #121026;
  transition: 0.3s;
  color: #f1f1f1;
}

.notification-container {
  position: relative;
}

.profileIcon {
  cursor: pointer;
}

.dropdown-content {
  position: absolute;
  top: 100%;
  right: 0;
  background-color: #19162c;
  border-radius: 10px;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
  padding: 8px;
  z-index: 1;
  width: 400px; /* Adjust width as needed */
  padding: 20px;
}

.notification-item {
  padding: 8px 0;
  border-bottom: 1px solid #eee;
}

.notification-item:last-child {
  border-bottom: none;
}

.seeAll {
  text-align: center;
  margin-top: 10px;
  cursor: pointer;
  font-weight: bold;
}

.notification-item {
  padding: 8px 0;
  border-bottom: 1px solid #121026;
  transition: background-color 0.3s ease; /* Add transition for smooth color change */
  cursor: pointer;
}

.notification-item:hover {
  background-color: #121026; /* Change background color on hover */

}


@media screen and (max-width: 525px) {
  .container {
    width: calc(100% - 68px);
  }

  .topContainer .inputBox {
    width: 120px;
    z-index: 101;
  }

  .topContainer .inputBox input:focus {
    width: 320px;
    transition: width 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
  }
}

